correction overflow

--- a/app/Resources/assets/sass/main.scss
+++ b/app/Resources/assets/sass/main.scss
@@ -137,7 +137,7 @@ i {
     .right {
       padding: 100px 40px 40px 0;
       //overflow: auto;
-      margin-left: -128px;
+      margin-left: -88px;
     }
     .zone,
     .left,
